fixing \sum notations

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -109,10 +109,10 @@
 
     % 1 or 2 paragraphs explaining what we did (the 'method') applied to the data 
 \paragraph{}
-    To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological community, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of a component - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring components in a neighbour-density dependant model (NDDM). [I'm thinking I should start bringing in the case study now and switch from using the word ' component' to 'species' - e.g. 'This model was applied to a dataset of a diverse annual wildflower community, where components consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution.'] Increases or decreases in the overall component's/in an overall species' performance (here, seed production) can thus be attributed to neighbouring components/species which were observed to co-occur. The resulting interaction effects can be competitive or facilitative, non-symmetrical (the effect of $i$ on $j$ does not necessarily match the effect of $j$ on $i$) and include intraspecific effects (the effect of $i$ on itself). The shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) and should be carefully verified before implementation. 
+    To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological community, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of a component - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring components in a neighbour-density dependant model (NDDM). This model was applied to a dataset of a diverse annual wildflower community, where components consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution. Increases or decreases in an overall species' performance (here, seed production) can thus be attributed to neighbouring components/species which were observed to co-occur. The resulting interaction effects can be competitive or facilitative, non-symmetrical (the effect of species $i$ on $j$ does not necessarily match the effect of species $j$ on $i$) and include intraspecific effects (the effect of species $i$ on itself). The shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) and should be carefully verified before implementation. 
 
 \paragraph{}
-    Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. A rare component may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This rare component may still however potentially interact with many of the other components in the system if given the opportunity to do so. Rather than assigning a 0 value to this unknown interaction, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that components typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two components impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each component's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
+    Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare species may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This species may still however potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to this unknown interaction, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that components typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two components' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each component's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
 
 
 \paragraph{}
@@ -216,7 +216,7 @@
     \paragraph{}
     The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks as well as traditional plant population dynamic models. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks however, interactions in our model are estimated from species effects on each other's growth rates. This allows us to capture how interactions may directly affect species abundances, rather than spatial association patterns. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. 
 
-    \paragraph{}
+    \paragraph{} % MOVE TO RESULTS?
     The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. Because they are estimated from observed interactions previously quantified by the IFM, the response and effect parameters are constrained such that their product follows a similar distribution to that of the observed interactions (Figure \ref{fig:adist}). The Bayesian implementation means that parameters are estimated using MCMC algorithms, which amongst many benefits can estimate more parameters than with more commonly used frequentist approaches \parencite{Dorazio2016}. This approach also returns parameter estimates as posterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus easily incorporate some measure of variation and uncertainty around interaction values. 
 
     \subsection{Limitations}
@@ -283,10 +283,10 @@
     \subsection{Neighbour density-dependant model}
         
         \paragraph{}
-        We begin by implementing a neighbour density-dependant model (NDDM) to each focal species $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ...$) against the measured proxy for lifetime reproductive success $P_{i}$:
+        We begin by implementing a neighbour density-dependant model (NDDM) to each focal species $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ..., S$) against the measured proxy for lifetime reproductive success $P_{i}$:
         
         \begin{equation}
-        P_{i} = \beta_{i0} - \sum_{i}^{j} \beta_{ij} N_{j}
+        P_{i} = \beta_{i0} - \sum_{j=1}^{S} \beta_{ij} N_{j}
         \label{nddm}
         \end{equation}
 
@@ -300,7 +300,7 @@
         In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the NDDM above will not be able to estimate all potential interactions ($\beta_{ij}$) between species. This is especially true for rare species. These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the NDD model. This model is described as the response-effect model (here called the response-impact model or RIM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
         
         \begin{equation}
-        P_{i} = \beta_{i0} - r_{i} \sum_{i}^{j} e_{j} N_{j}
+        P_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{S} e_{j} N_{j}
         \label{rim}
         \end{equation}
         
@@ -318,7 +318,7 @@
         The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely both between species and under different environmental conditions. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by writing the neighbour density-dependant model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
 
         \begin{equation}
-        P_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
+        P_{i} = \beta_{i0} \left ( 1 - \sum_{j=1}^{S} {\beta_{ij}}'' N_{j} \right )
         \label{LVform}
         \end{equation}
 
